--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>Hello World!!</h1>
+    <canvas id="canvas" width="300" height="300"></canvas>
   </body>
+  <script src="/bundle.js" charset="utf-8"></script>
 </html>
