--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -5,8 +5,7 @@
     <title>PasteApp</title>
   </head>
   <body>
-    <h1>Hello World!!</h1>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <div id="root"></div>
   </body>
   <script src="/bundle.js" charset="utf-8"></script>
 </html>
