--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>PasteApp</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css.map">
+    <style media="screen">
+      body {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
