--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>PasteApp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <style media="screen">
       body {
         margin: 0;
